--- a/Week_1/Python_basics/python_basics.ipynb
+++ b/Week_1/Python_basics/python_basics.ipynb
@@ -778,13 +778,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_palindrome_recursive(s):\n",
-    "    # TODO\n",
-    "    return None"
+    "   def is_palindrome_iterative(s):\n",
+    "    left = 0\n",
+    "    right = len(s) - 1\n",
+    "    while left < right:\n",
+    "        if s[left] != s[right]:\n",
+    "            return False\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    return True\n",
+    "def is_palindrome_recursive(s):\n",
+    "    if len(s) <= 1:\n",
+    "        return True\n",
+    "    if s[0] != s[-1]:\n",
+    "        return False\n",
+    "    return is_palindrome_recursive(s[1:-1])\n"
    ]
   },
   {
@@ -901,13 +914,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def is_prime(n):\n",
-    "    # TODO\n",
-    "    return None"
+    "    def is_prime(n):\n",
+    "    # Prime numbers must be greater than 1\n",
+    "    if n <= 1:\n",
+    "        return False\n",
+    "    \n",
+    "    # Check divisibility from 2 to sqrt(n)\n",
+    "    for i in range(2, int(n ** 0.5) + 1):\n",
+    "        if n % i == 0:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n"
    ]
   },
   {
